syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "KeyManagerGrpc";

package br.com.zup;

service KeyManagerGrpcService {
  rpc registra(RegistraNovaChaveRequest) returns (RegistraNovaChaveResponse){}
}

enum TipoChave{
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta{
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistraNovaChaveRequest{
  string idCliente = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message RegistraNovaChaveResponse{
  string idChave = 1;
  string idCliente = 2;
}
